k8deployment/prod_ctc/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: emma-caa-file-processor-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emma
      subapp: dwmp
      tier: backend
      type: kafka
      microservice: fileProcessorService
  template:
    metadata:
      labels:
        app: emma
        subapp: dwmp
        tier: backend
        type: kafka
        microservice: fileProcessorService
    spec:
      containers:
        - name: emma-caa-file-processor-service-container
          # CONTAINER_TAG will be changed by using sed command in Jenkinsfile
          image: docker.repo1.uhc.com/emma/emma-caa-file-processor-service:CONTAINER_TAG
          imagePullPolicy: Always
          resources:
            limits:
              cpu: '1500m'
              memory: '2Gi'
            requests:
              cpu: '1000m'
              memory: '1Gi'
          ports:
            - containerPort: 8080
          # https://kubernetes.io/docs/tasks/inject-data-application/distribute-credentials-secure/#configure-all-key-value-pairs-in-a-secret-as-container-environment-variables
          # Used the following command (these are all the variables that are defined):
          # kubectl create secret generic db-info-secret --from-literal=DB_HOST_NAME='' --from-literal=DB_NAME=''
          #   --from-literal=DB_SCHEMA_NAME='' --from-literal=DB_USER_NAME='' --from-literal=DB_USER_PASSWORD=''
          # To check all environment variables and their values injected into the pod, run:
          # kubectl exec -i -t emma-caa-file-processor-service-container -- /bin/sh -c 'echo "DB_HOST_NAME: $DB_HOST_NAME\nDB_NAME: $DB_NAME\nDB_SCHEMA_NAME: $DB_SCHEMA_NAME\nDB_USER_NAME: $DB_USER_NAME\nDB_USER_PASSWORD: $DB_USER_PASSWORD"'
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 2000
